Fix profile container spacing

--- a/style.css
+++ b/style.css
@@ -174,23 +174,11 @@ section {
   display:flex;
 }
 
-/* PROFILE SECTION */
-
 #profile {
   display: flex;
-  position: static;
-  gap: 2rem;
-  height: 10vh;
-  background: white;
-  border-radius: 0% 0% 0% 0% / 0% 0% 0% 0% ;
-  box-shadow: 20px 20px rgb(0, 0, 0);
-  transition: all .4s ease;
   justify-content: center;
-}
-
-#profile:hover {
-  border-radius: 0% 0% 50% 50% / 0% 0% 5% 5% ;
-  box-shadow: 10px 10px rgba(0,0,0,.25);
+  gap: 5rem;
+  height: 80vh;
 }
 
 .section__pic-container {
@@ -216,7 +204,6 @@ section {
 .section__text__p2 {
   font-size: 1.75rem;
   margin-bottom: 1rem;
-  color: rgb(86, 86, 86);
 }
 
 .title {
@@ -230,6 +217,7 @@ section {
   margin-top: 1rem;
   gap: 1rem;
 }
+
 
 /* ICONS */
 
